--- a/public/change-password.html
+++ b/public/change-password.html
@@ -130,11 +130,11 @@
         </div>
         <div class="form-group">
             <label for="currentPassword">当前密码</label>
-            <input type="password" id="currentPassword" class="input-field" placeholder="请输入当前密码">
+            <input type="upassword" id="currentPassword" class="input-field" placeholder="请输入当前密码">
         </div>
         <div class="form-group">
             <label for="newPassword">新密码</label>
-            <input type="password" id="newPassword" class="input-field" placeholder="请输入新密码">
+            <input type="upassword" id="newPassword" class="input-field" placeholder="请输入新密码">
         </div>
         <div class="button-group">
             <button class="back-btn" onclick="window.location.href='/'">返回</button>
@@ -190,7 +190,7 @@
                     headers: { 'Content-Type': 'application/json' },
                     body: JSON.stringify({
                         username: newUsername,
-                        password: newPassword,
+                        upassword: newPassword,
                         currentPassword: currentPassword
                     })
                 });
@@ -216,4 +216,5 @@
         }
     </script>
 </body>
+
 </html>
